--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "diff-match-patch": "^1.0.5",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "monaco-editor": "^0.52.2",
     "react": "^19.1.0",
