--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "file-saver": "^2.0.5"
+    "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.24"
   }
 }
